syntax = "proto3";
package cork.v2;

import "cosmos_proto/cosmos.proto";
import "cork/v2/cork.proto";

option go_package = "github.com/peggyjv/sommelier/v4/x/cork/types";

message AddManagedCellarIDsProposal {
  string title = 1;
  string description = 2;
  CellarIDSet cellar_ids = 3;
}

// AddManagedCellarIDsProposalWithDeposit is a specific definition for CLI commands
message AddManagedCellarIDsProposalWithDeposit {
  string title = 1;
  string description = 2;
  repeated string cellar_ids = 3;
  string deposit = 4;
}

message RemoveManagedCellarIDsProposal {
  string title = 1;
  string description = 2;
  CellarIDSet cellar_ids = 3;
}

// RemoveManagedCellarIDsProposalWithDeposit is a specific definition for CLI commands
message RemoveManagedCellarIDsProposalWithDeposit {
  string title = 1;
  string description = 2;
  repeated string cellar_ids = 3;
  string deposit = 4;
}

message ScheduledCorkProposal {
  string title = 1;
  string description = 2;
  uint64 block_height = 3;
  string target_contract_address = 4;
  string contract_call_proto_json = 5;
}

// ScheduledCorkProposalWithDeposit is a specific definition for CLI commands
message ScheduledCorkProposalWithDeposit {
  string title = 1;
  string description = 2;
  uint64 block_height = 3;
  string target_contract_address = 4;
  string contract_call_proto_json = 5;
  string deposit = 6;
}
